<resources>
    <string name="app_name">ScdApp</string>
    <string name="admin">Admin Login</string>
    <string name="admin_email">Enter Your Email</string>
    <string name="admin_password">Enter Your Password</string>
    <string name="admin_login">Login</string>
    <string name="admin_forget_password">Forget Password?</string>
    <string name="admin_level">Admin Level</string>
    <string name="user_level">User Level</string>
    <string name="user_login">User Login</string>
    <string name="user_email">Enter Your Email</string>
    <string name="user_password">Enter Your Password</string>
    <string name="user_signin">Sign In</string>
    <string name="user_signup">Sign Up?</string>
    <string name="user_forget_password">Forget Password?</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="title_activity_user_home">UserHomeActivity</string>
    <string name="action_signout">Sign Out</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_user_home1">UserHome1Activity</string>
    <string name="camera_button_text">Upload</string>
    <string name="sign_in_prompt">Sign In to begin</string>
    <string name="take_photo_prompt">Upload a Photo</string>
    <string name="download">Download</string>
    <string name="sign_in_anonymously">Sign In</string>
    <string name="rationale_storage">This sample reads images from your camera to demonstrate uploading.</string>
    <string name="label_link">Link to Uploaded File</string>
    <string name="label_download">Download File</string>
    <string name="log_out">Log out</string>
    <string name="success">Success</string>

    <string name="progress_downloading">Downloading…</string>
    <string name="progress_uploading">Uploading…</string>
    <string name="progress_auth">Signing In…</string>

    <string name="upload_success">Upload finished</string>
    <string name="upload_failure">Upload failed</string>

    <string name="download_success">Download finished</string>
    <string name="download_failure">Download failure</string>
    <string name="login">Log In</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_bottom">BottomActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

</resources>
