<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@drawable/back"
    android:orientation="vertical"
    tools:context="com.example.scdapp.ui.UserLoginActivity">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:background="@drawable/back">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="95dp"
            android:gravity="center"
            android:text="USER LOGIN "
            android:textColor="@color/white"
            android:textSize="30dp"
            android:textStyle="bold" />
    </android.support.v7.widget.Toolbar>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="131dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/editTextEmail11"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:paddingLeft="10dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:hint="@string/user_email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/editTextPass11"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:ems="10"
        android:paddingLeft="10dp"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/user_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_button2"
        android:text="@string/user_signin"
        android:textSize="20dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="94dp"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:id="@+id/signUp"
            android:layout_width="112dp"
            android:layout_marginLeft="15dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/user_signup"
            android:textStyle="bold"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/forgetPass"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:paddingLeft="8dp"
            android:layout_marginTop="25dp"
            android:layout_weight="1"
            android:textStyle="bold"
            android:text="@string/user_forget_password"
            android:textSize="20dp" />
    </LinearLayout>

</LinearLayout>